--- a/site-reserva/index.html
+++ b/site-reserva/index.html
@@ -453,6 +453,7 @@
                 $(a[i]).attr('class', b)
             }
             corAtual = novaCor
+            $('#nav').removeClass('show animate__animated animate__fadeIn')
         }
 
         function showMenuMobile() {
