--- a/site-reserva/index.html
+++ b/site-reserva/index.html
@@ -29,7 +29,7 @@
     <!-- END: Page CSS-->
 
     <!-- BEGIN: Custom CSS-->
-    <link rel="stylesheet" type="text/css" href="../assets/css/style.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css">
     <!-- END: Custom CSS-->
 
@@ -45,7 +45,7 @@
             <div class="row py-1">
                 <div class="col-12 col-sm-4 d-flex flex-row align-items-center justify-content-center justify-content-sm-start">
                     <h1 class="mb-0 h3 h2-sm text-bold-600">Barbearia do Sena</h1>
-                    <button class="btn p-0 font-medium-3 d-block d-sm-none ml-auto white" onclick="showMenuMobile()"><i class="fas fa-bars"></i></button>
+                    <button onclick="location.href = 'reserva-1.html';" class="btn p-0 font-medium-3 d-block d-sm-none ml-auto white" onclick="showMenuMobile()"><i class="fas fa-bars"></i></button onclick="location.href = 'reserva-1.html';">
                 </div>
                 <div class="col-12 col-sm-8 pt-2 pt-sm-0" id="nav">
                     <nav class="d-flex flex-column flex-md-row justify-content-end align-items-sm-center">
@@ -78,7 +78,7 @@
             <div class="row">
                 <div class="col-12 col-sm-7 order-2 order-sm-1 text-center text-sm-left">
                     <h2 class="h1 titulo pt-sm-3 py-1 pr-2">Nós da Barbearia do Sena buscamos oferecer o melhor serviço e atendimento aos nossos clientes.</h2>
-                    <button class="btn btn-outline-primary shadow-sm btn-lg text-bold-600 link-scroll" href="#destaques">Conheça nossos serviços<i class="fa fa-caret-down ml-1"></i></button>
+                    <button class="btn btn-outline-primary shadow-sm btn-lg text-bold-600 link-scroll" href="#destaques">Conheça nossos serviços<i class="fa fa-caret-down ml-1"></i></button onclick="location.href = 'reserva-1.html';">
                 </div>    
                 <div class="col-12 col-sm-5 order-1 order-sm-2">
                     <img class="img-fluid" src="/app/assets/svg/barber.svg">
@@ -101,7 +101,7 @@
                                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore.</p>
                                 <p class="float-left"><i class="far fa-clock"></i> 30 minutos</p>
                                 <p class="float-right"><i class="far fa-money-bill-alt"></i> R$ 45,00</p>
-                                <button class="btn btn-outline-primary text-bold-600 shadow-sm btn-block font-medium-2"><i class="fa fa-calendar"></i> Reservar horário</button>
+                                <button onclick="location.href = 'reserva-1.html';" class="btn btn-outline-primary text-bold-600 shadow-sm btn-block font-medium-2"><i class="fa fa-calendar"></i> Reservar horário</button onclick="location.href = 'reserva-1.html';">
                             </div>
                         </div>
                     </div>
@@ -115,7 +115,7 @@
                                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore.</p>
                                 <p class="float-left"><i class="far fa-clock"></i> 30 minutos</p>
                                 <p class="float-right"><i class="far fa-money-bill-alt"></i> R$ 45,00</p>
-                                <button class="btn btn-outline-primary text-bold-600 shadow-sm btn-block font-medium-2"><i class="fa fa-calendar"></i> Reservar horário</button>
+                                <button onclick="location.href = 'reserva-1.html';" class="btn btn-outline-primary text-bold-600 shadow-sm btn-block font-medium-2"><i class="fa fa-calendar"></i> Reservar horário</button onclick="location.href = 'reserva-1.html';">
                             </div>
                         </div>
                     </div>
@@ -129,7 +129,7 @@
                                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore.</p>
                                 <p class="float-left"><i class="far fa-clock"></i> 30 minutos</p>
                                 <p class="float-right"><i class="far fa-money-bill-alt"></i> R$ 45,00</p>
-                                <button class="btn btn-outline-primary text-bold-600 shadow-sm btn-block font-medium-2"><i class="fa fa-calendar"></i> Reservar horário</button>
+                                <button onclick="location.href = 'reserva-1.html';" class="btn btn-outline-primary text-bold-600 shadow-sm btn-block font-medium-2"><i class="fa fa-calendar"></i> Reservar horário</button onclick="location.href = 'reserva-1.html';">
                             </div>
                         </div>
                     </div>
@@ -163,7 +163,7 @@
                                         <p class="mb-0 float-right float-sm-none"><i class="far fa-money-bill-alt"></i> R$ 45,00</p>
                                     </div>
                                     <div class="col-12 col-sm-2 text-sm-right pl-sm-0">
-                                        <button class="btn btn-outline-primary text-bold-600 shadow-sm btn-block"><i class="fa fa-calendar"></i> Reservar horário</button>
+                                        <button onclick="location.href = 'reserva-1.html';" class="btn btn-outline-primary text-bold-600 shadow-sm btn-block"><i class="fa fa-calendar"></i> Reservar horário</button onclick="location.href = 'reserva-1.html';">
                                     </div>
                                 </div>
                             </div>
@@ -188,7 +188,7 @@
                                         <p class="mb-0 float-right float-sm-none"><i class="far fa-money-bill-alt"></i> R$ 45,00</p>
                                     </div>
                                     <div class="col-12 col-sm-2 text-sm-right pl-sm-0">
-                                        <button class="btn btn-outline-primary text-bold-600 shadow-sm btn-block"><i class="fa fa-calendar"></i> Reservar horário</button>
+                                        <button onclick="location.href = 'reserva-1.html';" class="btn btn-outline-primary text-bold-600 shadow-sm btn-block"><i class="fa fa-calendar"></i> Reservar horário</button onclick="location.href = 'reserva-1.html';">
                                     </div>
                                 </div>
                             </div>
@@ -213,7 +213,7 @@
                                         <p class="mb-0 float-right float-sm-none"><i class="far fa-money-bill-alt"></i> R$ 45,00</p>
                                     </div>
                                     <div class="col-12 col-sm-2 text-sm-right pl-sm-0">
-                                        <button class="btn btn-outline-primary text-bold-600 shadow-sm btn-block"><i class="fa fa-calendar"></i> Reservar horário</button>
+                                        <button onclick="location.href = 'reserva-1.html';" class="btn btn-outline-primary text-bold-600 shadow-sm btn-block"><i class="fa fa-calendar"></i> Reservar horário</button onclick="location.href = 'reserva-1.html';">
                                     </div>
                                 </div>
                             </div>
@@ -238,7 +238,7 @@
                                         <p class="mb-0 float-right float-sm-none"><i class="far fa-money-bill-alt"></i> R$ 45,00</p>
                                     </div>
                                     <div class="col-12 col-sm-2 text-sm-right pl-sm-0">
-                                        <button class="btn btn-outline-primary text-bold-600 shadow-sm btn-block"><i class="fa fa-calendar"></i> Reservar horário</button>
+                                        <button onclick="location.href = 'reserva-1.html';" class="btn btn-outline-primary text-bold-600 shadow-sm btn-block"><i class="fa fa-calendar"></i> Reservar horário</button onclick="location.href = 'reserva-1.html';">
                                     </div>
                                 </div>
                             </div>
@@ -263,7 +263,7 @@
                                         <p class="mb-0 float-right float-sm-none"><i class="far fa-money-bill-alt"></i> R$ 45,00</p>
                                     </div>
                                     <div class="col-12 col-sm-2 text-sm-right pl-sm-0">
-                                        <button class="btn btn-outline-primary text-bold-600 shadow-sm btn-block"><i class="fa fa-calendar"></i> Reservar horário</button>
+                                        <button onclick="location.href = 'reserva-1.html';" class="btn btn-outline-primary text-bold-600 shadow-sm btn-block"><i class="fa fa-calendar"></i> Reservar horário</button onclick="location.href = 'reserva-1.html';">
                                     </div>
                                 </div>
                             </div>
@@ -380,12 +380,12 @@
                         <div class="col-12">
                             <p class="">Dinheiro, Cartão de crédito, Cartão de débito.</p>
                             <div class="d-flex flex-row">
-                                <img src="/app/assets/img/dinheiro.png" style="max-width: 30px;" class="mr-1">
-                                <img src="/app/assets/img/mastercard.png" style="max-width: 30px;" class="mr-1">
-                                <img src="/app/assets/img/visa.png" style="max-width: 30px;" class="mr-1">
-                                <img src="/app/assets/img/elo.png" style="max-width: 30px;" class="mr-1">
-                                <img src="/app/assets/img/amex.png" style="max-width: 30px;" class="mr-1">
-                                <img src="/app/assets/img/diners.png" style="max-width: 30px;" class="mr-1">
+                                <img src="/app/assets/img/dinheiro.png" style="width: 30px;" class="mr-1">
+                                <img src="/app/assets/img/mastercard.png" style="width: 30px;" class="mr-1">
+                                <img src="/app/assets/img/visa.png" style="width: 30px;" class="mr-1">
+                                <img src="/app/assets/img/elo.png" style="width: 30px;" class="mr-1">
+                                <img src="/app/assets/img/amex.png" style="width: 30px;" class="mr-1">
+                                <img src="/app/assets/img/diners.png" style="width: 30px;" class="mr-1">
                             </div>
                         </div>
                     </div>
@@ -410,6 +410,7 @@
             </div>
         </div>
     </footer>
+
 
     <!-- BEGIN: Vendor JS-->
     <script src="../app-assets/vendors/js/vendors.min.js"></script>
