--- a/site-reserva/reserva-1.html
+++ b/site-reserva/reserva-1.html
@@ -3,6 +3,8 @@
 <!-- BEGIN: Head-->
 
 <head>
+    <meta name="theme-color" content="#00B5B8">
+    <link rel="icon" sizes="100x100" href="../app-assets/images/logo/icone.png">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0, minimal-ui">
