--- a/site-reserva/reserva-3.html
+++ b/site-reserva/reserva-3.html
@@ -58,7 +58,7 @@
                 <div class="col-sm-8 col-12">
                     <div class="row px-sm-3 py-sm-2">
                         <div class="col-12 shadow bg-primary white d-block d-sm-none">
-                            <h1 class="h3 text-bold-600 text-center my-1">Barbearia do Sena</h1>
+                            <h1 class="h3 text-bold-600 text-center my-1"><a href=index.html>Barbearia do Sena</a></h1>
                             <div class="bg-primary bg-darken-1 p-1 rounded-lg text-center">
                                 <h4 class="">Corte de cabelo</h4>
                                 <h5 class="mb-0"><i class="far fa-clock"></i> 30 minutos <i class="ml-2 far fa-money-bill-alt"></i> R$ 45,00</h5>
@@ -123,14 +123,14 @@
                             <a name="" id="" class="btn btn-outline-primary shadow-sm" href="reserva-2.html" style="position: absolute; bottom: 25px; left: 25px;"><i class="fa fa-caret-left mr-1"></i>Voltar</a>
                             <a name="" id="" class="btn btn-primary shadow-sm" href="#" style="position: absolute; bottom: 25px; right: 25px;">Fazer reserva<i class="fa fa-check-circle ml-1"></i></a>
                         </div>
-                        <div class="col-12 shadow bg-primary white p-1 text-center d-block d-sm-none">
-                            <img src="/app/app-assets/images/logo/icone.png" style="max-height: 25px;">
-                            <img src="/app/app-assets/images/logo/logo-nome.png" style="max-height: 25px;">
+                        <div class="col-12 shadow bg-dark text-center d-block d-sm-none" style="padding: 10px;">
+                            <img src="/app/app-assets/images/logo/icone.png" style="max-height: 20px;">
+                            <img src="/app/app-assets/images/logo/logo-nome.png" style="max-height: 20px;">
                         </div>
                     </div>
                 </div>
                 <div class="col-4 d-none d-sm-block bg-primary white" style="position: fixed; right: 0; bottom: 0; height: 100vh;">
-                    <h1 class="h2 px-1 pt-3 text-bold-600">Barbearia do Sena</h1>
+                    <h1 class="h2 px-1 pt-3 text-bold-600"><a href=index.html>Barbearia do Sena</a></h1>
                     <div class="bg-primary bg-darken-1 rounded p-1 mt-1 mb-3 mx-1">
                         <h4 class="">Corte de cabelo</h4>
                         <h5 class="mb-0"><i class="far fa-clock"></i> 30 minutos <i class="ml-2 far fa-money-bill-alt"></i> R$ 45,00</h5>
