--- a/site-reserva/index.html
+++ b/site-reserva/index.html
@@ -47,7 +47,7 @@
             <div class="row py-1">
                 <div class="col-12 col-sm-4 d-flex flex-row align-items-center justify-content-center justify-content-sm-start">
                     <h1 class="mb-0 h3 h2-sm text-bold-600">Barbearia do Sena</h1>
-                    <button onclick="location.href = 'reserva-1.html';" class="btn p-0 font-medium-3 d-block d-sm-none ml-auto white" onclick="showMenuMobile()"><i class="fas fa-bars"></i></button onclick="location.href = 'reserva-1.html';">
+                    <button class="btn p-0 font-medium-3 d-block d-sm-none ml-auto white" onclick="showMenuMobile()"><i class="fas fa-bars"></i></button onclick="location.href = 'reserva-1.html';">
                 </div>
                 <div class="col-12 col-sm-8 pt-2 pt-sm-0" id="nav">
                     <nav class="d-flex flex-column flex-md-row justify-content-end align-items-sm-center">
