Update cartoes Site Reserva

--- a/site-reserva/index.html
+++ b/site-reserva/index.html
@@ -381,13 +381,13 @@
                     <div class="row px-2">
                         <div class="col-12">
                             <p class="">Dinheiro, Cartão de crédito, Cartão de débito.</p>
-                            <div class="d-flex flex-row">
-                                <img src="/app/assets/img/dinheiro.png" style="width: 30px;" class="mr-1">
-                                <img src="/app/assets/img/mastercard.png" style="width: 30px;" class="mr-1">
-                                <img src="/app/assets/img/visa.png" style="width: 30px;" class="mr-1">
-                                <img src="/app/assets/img/elo.png" style="width: 30px;" class="mr-1">
-                                <img src="/app/assets/img/amex.png" style="width: 30px;" class="mr-1">
-                                <img src="/app/assets/img/diners.png" style="width: 30px;" class="mr-1">
+                            <div class="d-flex flex-row pagamentos">
+                                <img src="/app/assets/img/dinheiro.png" class="mr-1">
+                                <img src="/app/assets/img/mastercard.png" class="mr-1">
+                                <img src="/app/assets/img/visa.png" class="mr-1">
+                                <img src="/app/assets/img/elo.png" class="mr-1">
+                                <img src="/app/assets/img/amex.png" class="mr-1">
+                                <img src="/app/assets/img/diners.png" class="mr-1">
                             </div>
                         </div>
                     </div>
