--- a/site-reserva/reserva-1.html
+++ b/site-reserva/reserva-1.html
@@ -103,12 +103,7 @@
                                     </div>
                                 </div>
                             </div>                    
-                            
-                            <a name="" id="" class="btn btn-primary shadow-sm" href="reserva-2.html" style="position: absolute; bottom: 25px; right: 25px;">Avançar<i class="fa fa-caret-right ml-1"></i></a>
-                        </div>
-                        <div class="col-12 shadow bg-dark text-center d-block d-sm-none" style="padding: 10px;">
-                            <img src="/app/app-assets/images/logo/icone.png" style="max-height: 20px;">
-                            <img src="/app/app-assets/images/logo/logo-nome.png" style="max-height: 20px;">
+                            <a name="" id="" class="btn btn-primary shadow-sm d-none d-sm-block" href="reserva-2.html" style="position: absolute; bottom: 25px; right: 25px;">Avançar<i class="fa fa-caret-right ml-1"></i></a>
                         </div>
                     </div>
                 </div>
@@ -139,6 +134,11 @@
                             <img src="/app/app-assets/images/logo/logo-nome.png" style="max-height: 25px;">
                         </div>                
                     </div>
+                </div>
+            </div>
+            <div class="row d-block d-sm-none">
+                <div class="col-12 bg-white border-top fixed-bottom" style="padding: 5px">
+                    <a class="btn btn-primary shadow-sm float-right" href="reserva-2.html">Avançar<i class="fa fa-caret-right ml-1"></i></a>
                 </div>
             </div>
         </div>
