--- a/site-reserva/reserva-3.html
+++ b/site-reserva/reserva-3.html
@@ -120,12 +120,8 @@
                                     </div>
                                 </div>
                             </div>
-                            <a name="" id="" class="btn btn-outline-primary shadow-sm" href="reserva-2.html" style="position: absolute; bottom: 25px; left: 25px;"><i class="fa fa-caret-left mr-1"></i>Voltar</a>
-                            <a name="" id="" class="btn btn-primary shadow-sm" href="#" style="position: absolute; bottom: 25px; right: 25px;">Fazer reserva<i class="fa fa-check-circle ml-1"></i></a>
-                        </div>
-                        <div class="col-12 shadow bg-dark text-center d-block d-sm-none" style="padding: 10px;">
-                            <img src="/app/app-assets/images/logo/icone.png" style="max-height: 20px;">
-                            <img src="/app/app-assets/images/logo/logo-nome.png" style="max-height: 20px;">
+                            <a name="" id="" class="btn btn-outline-primary shadow-sm d-none d-sm-block" href="reserva-2.html" style="position: absolute; bottom: 25px; left: 25px;"><i class="fa fa-caret-left mr-1"></i>Voltar</a>
+                            <a name="" id="" class="btn btn-primary shadow-sm d-none d-sm-block" href="#" style="position: absolute; bottom: 25px; right: 25px;">Fazer reserva<i class="fa fa-check-circle ml-1"></i></a>
                         </div>
                     </div>
                 </div>
@@ -157,6 +153,12 @@
                         </div>                
                     </div>
                 </div>
+            </div>
+            <div class="row d-block d-sm-none">
+                <div class="col-12 bg-white border-top fixed-bottom" style="padding: 5px">
+                    <a name="" id="" class="btn btn-outline-primary shadow-sm float-left" href="reserva-2.html"><i class="fa fa-caret-left mr-1"></i>Voltar</a>
+                    <a name="" id="" class="btn btn-primary shadow-sm float-right" href="#">Fazer reserva<i class="fa fa-check-circle ml-1"></i></a>
+                 </div>
             </div>
         </div>
     </main>
