--- a/site-reserva/index.html
+++ b/site-reserva/index.html
@@ -54,7 +54,7 @@
                         <a class="nav-link mx-sm-1 text-bold-600 link-scroll" href="#servicos"><i class="fas fa-bars mr-1"></i>Nossos serviços</a>
                         <a class="nav-link mx-sm-1 text-bold-600 link-scroll" href="#maisinfo"><i class="fas fa-bars mr-1"></i>Mais informações</a>
                         <a class="nav-link mx-sm-1 text-bold-600 link-scroll" href="#maisinfo"><i class="fas fa-bars mr-1"></i>Contato</a>
-                        <select class="custom-select dark" id="changeColor" style="width: 150px;">
+                        <!-- <select class="custom-select dark" id="changeColor" style="width: 150px;">
                             <option selected="" value="primary">Verde Água</option>
                             <option value="success">Verde</option>
                             <option value="teal">Verde escuro</option>
@@ -68,7 +68,7 @@
                             <option value="pink">Rosa</option>
                             <option value="purple">Roxo</option>
                             <option value="blue-grey">Cinza</option>
-                        </select>
+                        </select> -->
                     </nav>
                 </div>
             </div>
